--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.format_sql = true
 
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+spring.security.user.name=${EXISTING_MGMT_USERNAME}
+spring.security.user.password=${EXISTING_MGMT_PASSWORD}
