--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework = DEBUG
-spring.datasource.url=jdbc:mysql://localhost:3306/employees?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employees?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${EXISTING_MYSQL_DB_USERNAME}
 spring.datasource.password=${EXISTING_MYSQL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
